recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:2: error: not found: value level
    if (level==1){
        ^PolygonFractal:9: error: not found: value level
      polygonFractal(level-1,sides,length*shrink,shrink)
                     ^