recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
    if (level==1){
    for (i<-0 to sides-1){
      avance(length)
      droite(360/sides)
    }
    } else {
    for (i<-0 to sides-1){
      polygonFractal(level-1,sides,length*shrink,shrink)
      avance(length)
      droite(360/sides)
    }
  }
}